in class worktime

--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="styles.css" rel="stylesheet" type="text/css">
-        <title>Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet" type="text/css">
+    <title>Home</title>
     </head>
 
-      <body>
+<body>
+<header class="site-header">
+<nav class="navigation">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="bahng-bio.html">Bahng Bio</a></li>
+        <li><a href="elilish-bio.html">Eilish Bio</a></li>
+        <li><a href="kaze-bio.html">Kaze Bio</a></li>
+        <li><a href="bahng-merch.html">Bahng Merch</a></li>
+        <li><a href="eilish-merch.html">Eilish Merch</a></li>
+        <li><a href="kaze-merch.html">Kaze Merch</a></li>
+        <li><a href="bahng-music.html">Bahng Music</a></li>
+        <li><a href="eilish-music.html">Eilish Music</a></li>
+        <li><a href="kaze-music.html">Kaze Music</a></li>
+      </ul>
+</nav>
+</header>
 
-        <header class="site-header">
-        <h1>Home</h1>
-        </header>
-
-        <nav class="navigation">
-         <ul>
-            <li><a href="index.html">Home</a></li>
-
-            <li><a href="bahng-bio.html">Bahng Bio</a></li>
-            <li><a href="elilish-bio.html">Eilish Bio</a></li>
-            <li><a href="kaze-bio.html">Kaze Bio</a></li>
-
-            <li><a href="bahng-merch.html">Bahng Merch</a></li>
-            <li><a href="eilish-merch.html">Eilish Merch</a></li>
-            <li><a href="kaze-merch.html">Kaze Merch</a></li>
-
-            <li><a href="bahng-music.html">Bahng Music</a></li>
-            <li><a href="eilish-music.html">Eilish Music</a></li>
-            <li><a href="kaze-music.html">Kaze Music</a></li>
-        </ul>
-        </nav>
-    </body>
+<div class="wrapper">
+<h1>YOUTH ARTISTS ON THE RISE</h1>
+<h2>Gen Z Musicians Gaining Popularity Around the Globe</h2>
+    
+<div class="image-row">
+      <img src="home-bahng.png" alt="Bahng">
+      <img src="home-eilish.png" alt="Eilish">
+      <img src="home-kaze.png" alt="Kaze">
+</div>
+</div>
+</body>
 </html>
