--- a/bahng-music.html
+++ b/bahng-music.html
@@ -15,22 +15,23 @@
         <h1>Bahng Music</h1>
         </header>
 
-        <nav class="navigation">
-         <ul>
-            <li><a href="index.html">Home</a></li>
+<nav class="navigation">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="bahng-bio.html">Bahng Bio</a></li>
+        <li><a href="elilish-bio.html">Eilish Bio</a></li>
+        <li><a href="kaze-bio.html">Kaze Bio</a></li>
+        <li><a href="bahng-music.html">Bahng Music</a></li>
+        <li><a href="eilish-music.html">Eilish Music</a></li>
+        <li><a href="kaze-music.html">Kaze Music</a></li>
+      </ul>
+</nav>
 
-            <li><a href="bahng-bio.html">Bahng Bio</a></li>
-            <li><a href="elilish-bio.html">Eilish Bio</a></li>
-            <li><a href="kaze-bio.html">Kaze Bio</a></li>
+<div class="image-row">
+      <img src="hannahbioside1.jpg" alt="Bahng 1">
+      <img src="hannahbiomiddle.png" alt="Bahng 2">
+      <img src="hannahbioside2.jpg" alt="Bahng 3">
+</div>
 
-            <li><a href="bahng-merch.html">Bahng Merch</a></li>
-            <li><a href="eilish-merch.html">Eilish Merch</a></li>
-            <li><a href="kaze-merch.html">Kaze Merch</a></li>
-
-            <li><a href="bahng-music.html">Bahng Music</a></li>
-            <li><a href="eilish-music.html">Eilish Music</a></li>
-            <li><a href="kaze-music.html">Kaze Music</a></li>
-        </ul>
-        </nav>
     </body>
 </html>
