--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link href="initial-styles.css" rel="stylesheet" type="text/css">
     <title>Home</title>
     </head>
 
@@ -15,9 +15,6 @@
         <li><a href="bahng-bio.html">Bahng Bio</a></li>
         <li><a href="elilish-bio.html">Eilish Bio</a></li>
         <li><a href="kaze-bio.html">Kaze Bio</a></li>
-        <li><a href="bahng-merch.html">Bahng Merch</a></li>
-        <li><a href="eilish-merch.html">Eilish Merch</a></li>
-        <li><a href="kaze-merch.html">Kaze Merch</a></li>
         <li><a href="bahng-music.html">Bahng Music</a></li>
         <li><a href="eilish-music.html">Eilish Music</a></li>
         <li><a href="kaze-music.html">Kaze Music</a></li>
