--- a/kaze-music.html
+++ b/kaze-music.html
@@ -14,23 +14,24 @@
         <header class="site-header">
         <h1>Kaze Music</h1>
         </header>
-        
-        <nav class="navigation">
-         <ul>
-            <li><a href="index.html">Home</a></li>
 
-            <li><a href="bahng-bio.html">Bahng Bio</a></li>
-            <li><a href="elilish-bio.html">Eilish Bio</a></li>
-            <li><a href="kaze-bio.html">Kaze Bio</a></li>
+<nav class="navigation">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="bahng-bio.html">Bahng Bio</a></li>
+        <li><a href="elilish-bio.html">Eilish Bio</a></li>
+        <li><a href="kaze-bio.html">Kaze Bio</a></li>
+        <li><a href="bahng-music.html">Bahng Music</a></li>
+        <li><a href="eilish-music.html">Eilish Music</a></li>
+        <li><a href="kaze-music.html">Kaze Music</a></li>
+      </ul>
+</nav>
 
-            <li><a href="bahng-merch.html">Bahng Merch</a></li>
-            <li><a href="eilish-merch.html">Eilish Merch</a></li>
-            <li><a href="kaze-merch.html">Kaze Merch</a></li>
+<div class="image-row">
+      <img src="fujibio1jpg.jpg" alt="Kaze 1">
+      <img src="fujibiomiddle.jpg" alt="Kaze 2">
+      <img src="fujibio2.jpg" alt="Kaze 3">
+</div>
 
-            <li><a href="bahng-music.html">Bahng Music</a></li>
-            <li><a href="eilish-music.html">Eilish Music</a></li>
-            <li><a href="kaze-music.html">Kaze Music</a></li>
-        </ul>
-        </nav>
     </body>
 </html>
