--- a/bahng-music.html
+++ b/bahng-music.html
@@ -28,10 +28,17 @@
 </nav>
 
 <div class="image-row">
-      <img src="hannahbioside1.jpg" alt="Bahng 1">
-      <img src="hannahbiomiddle.png" alt="Bahng 2">
-      <img src="hannahbioside2.jpg" alt="Bahng 3">
+  <img src="hannahbioside1.jpg" alt="Bahng 1">
 </div>
+
+<div class="image-row">
+  <img src="hannahbiomiddle.png" alt="Bahng 2">
+</div>
+
+<div class="image-row">
+  <img src="hannahbioside2.jpg" alt="Bahng 3">
+</div>
+
 
     </body>
 </html>
