--- a/bahng-music.html
+++ b/bahng-music.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="styles.css" rel="stylesheet" type="text/css">
-        <link href="1-hannah-styles.css" rel="stylesheet" type="text/css">
+        <link href="2-hannah-styles.css" rel="stylesheet" type="text/css">
 
         <title>Bahng Music</title>
     </head>
@@ -27,18 +26,32 @@
       </ul>
 </nav>
 
-<div class="image-row">
+
+<div class="image-row image-row-1">
+  <div class="text-block">
+    <h2>Latest Releases</h2>
+    <p>This is some sample text describing the first image.</p>
+  </div>
   <img src="hannahbioside1.jpg" alt="Bahng 1">
 </div>
 
-<div class="image-row">
+
+<div class="image-row image-row-2">
   <img src="hannahbiomiddle.png" alt="Bahng 2">
+  <div class="text-block">
+    <h2>Musical Interests</h2>
+    <p>This is some sample text describing the second image.</p>
+  </div>
 </div>
 
-<div class="image-row">
+
+<div class="image-row image-row-3">
+  <div class="text-block">
+    <h2>Tour Information</h2>
+    <p>This is some sample text describing the third image.</p>
+  </div>
   <img src="hannahbioside2.jpg" alt="Bahng 3">
 </div>
-
-
+        
     </body>
 </html>
