--- a/eilish-music.html
+++ b/eilish-music.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="styles.css" rel="stylesheet" type="text/css">
-        <link href="2-billie-styles.css" rel="stylesheet" type="text/css">
+        <link href="1-billie-styles.css" rel="stylesheet" type="text/css">
 
         <title>Eilish Music</title>
     </head>
@@ -27,10 +26,31 @@
       </ul>
 </nav>
 
-<div class="image-row">
-      <img src="billiebio1.png" alt="Eilish 1">
-      <img src="billiebiomiddle.png" alt="Eilish 2">
-      <img src="billiebio2.png" alt="Eilish 3">
+
+<div class="image-row image-row-1">
+  <div class="text-block">
+    <h2>Latest Releases</h2>
+    <p>This is some sample text describing the first image.</p>
+  </div>
+  <img src="billiebio1.png" alt="Eilish 1">
+</div>
+
+
+<div class="image-row image-row-2">
+  <img src="billiebiomiddle.png" alt="Eilish 2">
+  <div class="text-block">
+    <h2>Musical Interests</h2>
+    <p>This is some sample text describing the second image.</p>
+  </div>
+</div>
+
+
+<div class="image-row image-row-3">
+  <div class="text-block">
+    <h2>Tour Information</h2>
+    <p>This is some sample text describing the third image.</p>
+  </div>
+  <img src="billiebio2.png" alt="Eilish 3">
 </div>
 
     </body>
