--- a/bahng-music.html
+++ b/bahng-music.html
@@ -50,25 +50,16 @@
     <h2>Latest Releases</h2>
     <p>This is some sample text describing the first image.</p>
   </div>
-  <img src="hannahbioside1.jpg" alt="Bahng 1">
-</div>
-
-
-<div class="image-row image-row-2">
-  <img src="hannahbiomiddle.png" alt="Bahng 2">
-  <div class="text-block">
-    <h2>Musical Interests</h2>
-    <p>This is some sample text describing the second image.</p>
-  </div>
+  <img src="bahngmusic1.png" alt="Bahng 1">
 </div>
 
 
 <div class="image-row image-row-3">
   <div class="text-block">
     <h2>Tour Information</h2>
-    <p>This is some sample text describing the third image.</p>
+    <p>Hannah as a more recent artist has gone on tour throughout North America two times. Her first major tour was titled The Abysmal Tour in late 2024. Similarly her second major tour was in late 2025 titled The Misunderstood Tour.</p>
   </div>
-  <img src="hannahbioside2.jpg" alt="Bahng 3">
+  <img src="bahngmusic2.png" alt="Bahng 3">
 </div>
         
     </body>
