soo close with troubleshooting and more

--- a/kaze-music.html
+++ b/kaze-music.html
@@ -59,7 +59,7 @@
     <h2>Tour Information</h2>
     <p>This is some sample text describing the third image.</p>
   </div>
-  <img src="fujibio2.jpg" alt="Kaze 3">
+  <img src="kazemusic2.png" alt="Kaze 3">
 </div>
 
     </body>
