only minor changes remaining

--- a/eilish-music.html
+++ b/eilish-music.html
@@ -50,7 +50,7 @@
     <h2>Latest Releases</h2>
     <p>This is some sample text describing the first image.</p>
   </div>
-  <img src="billiebio1.png" alt="Eilish 1">
+  <img src="eilishmusic1.png" alt="Eilish 1">
 </div>
 
 
@@ -59,7 +59,7 @@
     <h2>Tour Information</h2>
     <p>This is some sample text describing the third image.</p>
   </div>
-  <img src="billiebio2.png" alt="Eilish 3">
+  <img src="eilishmusic2.png" alt="Eilish 3">
 </div>
 
     </body>
