--- a/kaze-music.html
+++ b/kaze-music.html
@@ -49,7 +49,7 @@
     <h2>Latest Releases</h2>
     <p>This is some sample text describing the first image.</p>
   </div>
-  <img src="fujibio1jpg.jpg" alt="Kaze 1">
+  <img src="kazemusic1.png" alt="Kaze 1">
 </div>
 
 
