meant to push edits

--- a/bahng-music.html
+++ b/bahng-music.html
@@ -48,7 +48,7 @@
 <div class="image-row image-row-1">
   <div class="text-block">
     <h2>Latest Releases</h2>
-    <p>This is some sample text describing the first image.</p>
+    <p>Most recent albums by Hannah Bahng include The Misunderstood EP and The Abysmal EP. Both albums come after the release of Perfect Blues, the first album she ever released.</p>
   </div>
   <img src="bahngmusic1.png" alt="Bahng 1">
 </div>
