--- a/eilish-music.html
+++ b/eilish-music.html
@@ -48,7 +48,7 @@
 <div class="image-row image-row-1">
   <div class="text-block">
     <h2>Latest Releases</h2>
-    <p>This is some sample text describing the first image.</p>
+    <p>Hit Me Hard and Soft is the most recent album by Billie Eilish. The album features 10 tracks that were released in early May of 2024.</p>
   </div>
   <img src="eilishmusic1.png" alt="Eilish 1">
 </div>
@@ -57,7 +57,7 @@
 <div class="image-row image-row-3">
   <div class="text-block">
     <h2>Tour Information</h2>
-    <p>This is some sample text describing the third image.</p>
+    <p>Billie Eilish began touring in 2017 and has maintained consistent tours since. She recently wrapped up her seventh tour titled the Hit Me Hard and Soft Tour that she donated sales from.</p>
   </div>
   <img src="eilishmusic2.png" alt="Eilish 3">
 </div>
