--- a/kaze-music.html
+++ b/kaze-music.html
@@ -47,7 +47,7 @@
 <div class="image-row image-row-1">
   <div class="text-block">
     <h2>Latest Releases</h2>
-    <p>This is some sample text describing the first image.</p>
+    <p>Prema is a signifiant album that Fuji Kaze released early September 2025. The album features all english tracks as opposed to primarily being in Japanese like the vast majority of his other songs.</p>
   </div>
   <img src="kazemusic1.png" alt="Kaze 1">
 </div>
@@ -57,7 +57,7 @@
 <div class="image-row image-row-3">
   <div class="text-block">
     <h2>Tour Information</h2>
-    <p>This is some sample text describing the third image.</p>
+    <p>Despite releasing his own music for the first time in late 2019, Fuji Kaze went on tour for the first time in 2020. Granted, until 2025 he widely had not toured in the United States and remained close to Japan for performances. </p>
   </div>
   <img src="kazemusic2.png" alt="Kaze 3">
 </div>
